# CaseStudy

./: .gitignore  README.md  drowning_pool_001_skeleton.json  main.py  main_Ske.py  main_persona.py  pyproject.toml  test_convert.py
Persona/: __init__.py  state.py
Persona/graph/: __init__.py
Persona/graph/chain/: __init__.py  persona_chain.py
Persona/graph/nodes/: __init__.py  generate_personas_node.py  load_case_node.py
Skeleton/: __init__.py  state.py
Skeleton/graph/: __init__.py
Skeleton/graph/chain/: __init__.py  canon_chain.py
Skeleton/graph/nodes/: __init__.py  generate_canon_node.py  load_case_node.py
agent/: const.py  graph.py  state.py
agent/chain/: Persona_chain.py  Scene_chain.py  __init__.py  generate_scene.py  parse_chain.py
agent/chain/test/: test_generate_scene.py  test_parse_output.py  test_scene_output.py
agent/nodes/: generator_node.py  parse_input.py  parse_node.py  parse_user_turn_node.py  persona_node.py  scene_node.py
api_casestudy/: README.md  main.py
casestudy/: README.md  main.py
casestudy/Web/: main.py
casestudy/Web/Front-end/: index.html
casestudy/agent/: const.py  graph.py  memory.py  state.py
casestudy/agent/chains/: __init__.py  action.py  persona.py  responder.py  scene.py
casestudy/agent/nodes/: __init__.py  action.py  egress.py  ingress.py  persona.py  policy.py  responder.py  semantic.py  state_update.py  transition.py
casestudy/app/: main.py
casestudy/app/crud/: case_crud.py
casestudy/utils/: auto_save.py  load.py  save.py  semantic_extract.py
data/: drown.json  drowning_pool_001_personas.json
(+12 files in other folders)
